assets/css/style.css
/*
 * Theme Name: 
 * Theme URI: 
 * Author: Milan Savov, Nikola Kostov
 * Author URI/Mail: milan.savov@gmail.com, nikolakostov1991@gmail.com
 * Version: 1.0
 * */

 /* TABLE OF CONTENT 
*
* - CUSTOM RESETS
    - Buttons
    - Forms
* - LAYOUT
* - HEADER 
    - Site Logo
    - Navigation
* - HERO (BANNER)
* - HOMEPAGE SECTIONS
    - Features 
    - Services
    - Map Feature 
    - Portfolio
    - Newsletter 
* - FOOTER
* - PAGES
    - PORTFOLIO
    - PORTFOLIO ITEM
    - BLOG
    - BLOG POST
    - CONTACT
*
*/

/* 
================================================== */
:root {
    --CompRed: rgb(255, 66, 66);
    --CompOrange: rgb(222, 144, 64);
    --CompBlue: rgb(114, 114, 255);
    --CompMiddle: rgb(255, 125, 222);

    --IndexColor: var(--CompOrange);
    --VersionFourColor: var(--CompRed);
    --ReimaginedColor: var(--CompBlue);

    --ThemeColor: var(--IndexColor);

    --VeryDarkGray: rgb(40, 40, 41);
    --DarkGray: rgb(68, 68, 72);
    --VeryLightGray: rgb(254, 254, 254);

    --ScreenshotOverlayColor: rgba(0, 0, 0, 0);
}

@font-face {
    font-family: 'minecraftchmc';
    src: url(../fonts/minecraftchmc-dblx-webfont.eot);
    src: url(../fonts/minecraftchmc-dblx-webfont.eot?#iefix) format('embedded-opentype'),
         url(../fonts/minecraftchmc-dblx-webfont.ttf) format('truetype'),
         url(../fonts/minecraftchmc-dblx-webfont.svg#minecraftchmcmedium) format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'rubiklight_italic';
    src: url(../fonts/rubik/rubik-italic-variablefont_wght-webfont.eot);
    src: url(../fonts/rubik/rubik-italic-variablefont_wght-webfont.eot?#iefix) format('embedded-opentype'),
         url(../fonts/rubik/rubik-italic-variablefont_wght-webfont.ttf) format('truetype'),
         url(../fonts/rubik/rubik-italic-variablefont_wght-webfont.svg#rubiklight_italic) format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'rubiklight';
    src: url(../fonts/rubik/rubik-variablefont_wght-webfont.eot);
    src: url(../fonts/rubik/rubik-variablefont_wght-webfont.eot?#iefix) format('embedded-opentype'),
         url(../fonts/rubik/rubik-variablefont_wght-webfont.ttf) format('truetype'),
         url(../fonts/rubik/rubik-variablefont_wght-webfont.svg#rubiklight) format('svg');
    font-weight: normal;
    font-style: normal;
}


/* CUSTOM RESETS
================================================== */
a {
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    -ms-transition: all 0.25s ease-in-out;
    cursor: pointer;
    color: var(--VeryLightGray);
}

a:focus,
a:hover {
    color: var(--ThemeColor);
    outline: 0 none;
    text-decoration: none;
}

p {
    margin-bottom: 0;
    font-size: 14px;
    font-weight: 300;
    color: var(--VeryLightGray);
    line-height: 22px;
}

h1 {
    font-size: 62px;
}

h2 {
    font-size: 42px;
}

h1,h2,h3,h4,h5 {
    color: var(--VeryLightGray);
}

p + p {
    margin-top: 40px;
}

/* Buttons */
.btn {
    line-height: 50px;
    min-width: 200px;
    font-size: 18px;
    font-weight: 300;
    border: 0;
    border-radius: 50px;
    color: var(--VeryLightGray);
    background-color: var(--DarkGray);
    padding: 0;
    transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, border-color 0.25s ease-in-out;
    -moz-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, border-color 0.25s ease-in-out;
    -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, border-color 0.25s ease-in-out;
    -o-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, border-color 0.25s ease-in-out;
    -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out, border-color 0.25s ease-in-out;
}

.btn-border {
    border: 2px solid var(--ThemeColor);
}

.btn-fill {
    background-color: var(--ThemeColor);
    color: #fff;
}

.btn-gray {
    background-color: var(--DarkGray);
    color: var(--VeryLightGray);
}

.btn-orange {
    background-color: var(--ThemeColor);
    color: #fff;  
}

.btn:hover,
button.btn:hover,
.btn:focus,
button.btn:focus {
    background-color: var(--VeryLightGray);
    color: var(--VeryDarkGray);
}

.btn-gray:hover,
.btn-gray:focus {
    background-color: var(--ThemeColor);
    color: #fff;
}

/* 
 * Forms 
 */
/* Input fields */
.form-group {
    position: relative;
    margin: 0 auto;
    width: 100%;
}

.form-control {
    border-radius: 25px;
    height: 50px;
    padding: 15px 20px;
    border-color: var(--VeryLightGray);
    background-color: var(--DarkGray);
}

.form-control + .form-control {
    margin-top: 10px;
}

.form-control:focus {
    background-color: var(--DarkGray);
    border-color: var(--ThemeColor);
    box-shadow: none;
    outline: none;
}

.form-group .btn {
    position: absolute;
    top: 5px;
    right: 5px;
    line-height: 40px;
    min-width: 60px;
    font-size: 16px;
    border-radius: 25px;
}

.form-control-comment {
    height: 100px;
    resize: none;
}

.search-form .form-group .form-control {
    padding-right: 80px;
}

/* ELEMENTS
================================================== */
/* Checkbox fields */
input[type=checkbox],
input[type=radio] {
    position: absolute;
    visibility: hidden;
    height: auto;
    margin-top: 0;
}

.checkbox {
    margin: 0;
} 

.checkbox + .checkbox,
.radio-btn + .radio-btn {
    margin-top: 15px;
}

.checkbox [type="checkbox"]:not(:checked) + label,
.checkbox [type="checkbox"]:checked + label {
    position: relative;
    padding-left: 30px;
    cursor: pointer;
}
/* ... */

